# aoc

./: .gitignore  README.md
adventOfCode2022/: Cargo.toml
adventOfCode2022/src/: aoc11l.rs  aoc11p.lalrpop  aoc14p.lalrpop  aoc15p.lalrpop  aoc16p.lalrpop  aoc19l.rs  aoc19p.lalrpop  aoc21l.rs  aoc21p.lalrpop  aoc4p.lalrpop  aoc5p.lalrpop  aoc7l.rs  aoc7p.lalrpop  aoc_data.rs  lib.rs  my_parser_error.rs
adventOfCode2023/: Cargo.toml
adventOfCode2023/src/: aoc_data.rs  lib.rs
adventOfCode2025/: Cargo.toml
adventOfCode2025/src/: aoc.rs  aoc_data.rs
