[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
float_eq = "1.0.0"
itertools = "0.12.0"
miette = { version = "5.5.0", features = ["fancy"] }
pathfinding = "4.1.1"
serde_json = "1.0.89"
thiserror = "1.0.37"
ureq = "2.5.0"
glam = "0.24.2"
bitmask-enum = "2.1.0"
ndarray = "0.15.6"
num = "0.4.0"
regex = "1.10.2"
nom = "7.1.3"
nom-supreme = "0.8.0"
strum = { version = "0.25.0", features = ["derive"] }
dotenv = "0.15.0"
lending-iterator = "0.1.7"
array2d = "0.3.0"
#fixedbitset = "0.4.2"
#hashcow = "0.2.0"
